fix: update Faker instantiation to use Locale.of method